chore: small cleanup